objects/Stage_Deliverable__c.object
<CustomObject>
    <fields>
        <fullName>Deliverable_ID__c</fullName>
        <label>Deliverable ID</label>
        <referenceTo>Deliverable__c</referenceTo>
        <relationshipLabel>Stage Deliverables</relationshipLabel>
        <relationshipName>Stage_Deliverables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deliverable_Name__c</fullName>
        <formula>Deliverable_ID__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deliverable Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Role ID</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Stage Deliverables</relationshipLabel>
        <relationshipName>Stage_Deliverables</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <formula>Owner_Role_ID__r.Role_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stage ID</label>
        <referenceTo>Stage__c</referenceTo>
        <relationshipLabel>Stage Deliverables</relationshipLabel>
        <relationshipName>Stage_Deliverables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <formula>Stage_ID__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Name</label>
        <type>Text</type>
    </fields>
    <label>Stage Deliverable</label>
    <nameField>
        <displayFormat>SD-{00000}</displayFormat>
        <label>Stage Deliverable ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>